# timed-input

./: LICENSE  README.md  setup.cfg  timedinput.py
src/: timedinput.py
src/timed_input.egg-info/: PKG-INFO  SOURCES.txt
