[metadata]
name = timed_input
version = 0.0.1
author = JavaWiz1
author_email = JavaWiz1@hotmail.com
description = A timed input cli helper project for windows and *nix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JavaWiz1/timed-input
project_urls =
    Bug Tracker = https://github.com/JavaWiz1/timed-input/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src